--- a/css/bola.css
+++ b/css/bola.css
@@ -384,7 +384,7 @@ body {
   position: relative;
   bottom: 842px;
   overflow: hidden;
-  box-shadow: inset 0px 0px 10px 6px rgba(255, 255, 255, 0.888), inset 0px 0px 23px 12px rgba(255, 255, 255, 0.433);
+  box-shadow: inset 0px 0px 10px 6px rgba(255, 255, 255, 0.888), inset px 0px 23px 12px rgba(255, 255, 255, 0.433);
 }
 
 .bottom {
