Texto 'OS DESEAMOS FELIZ NAVIDAD' con cambios

--- a/css/texto.css
+++ b/css/texto.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Caramel&display=swap');
 body {
-    background: #333;
+    background: #f3c;
     padding-top: 150px;
 }
 
